--- a/object-fit/index.html
+++ b/object-fit/index.html
@@ -4,16 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>object-fit sample</title>
+  <title>object-fit/position Sample</title>
   <style>
+    .info {
+      padding-bottom: 20px;
+      margin-bottom: 40px;
+      border-bottom: 3px solid #000;
+    }
+
     .title {
       font-size: 30px;
     }
 
     .text {
-      padding-bottom: 20px;
-      margin-bottom: 40px;
-      border-bottom: 3px solid #000;
+      font-size: 24px;
+    }
+
+    .definition > dt,
+    .definition > dd {
+      display: inline-block;
       font-size: 24px;
     }
 
@@ -50,44 +59,76 @@
     .list:nth-child(5) .img_box img {
       object-fit: scale-down;
     }
+
+    .list.position--leftTop .img_box img {
+      object-position: left top;
+    }
   </style>
 </head>
 <body>
-  <h2 class="title">object-fit</h2>
-  <p class="text">
-    CSS object-fit속성은 컨테이너에 맞게 img태그 또는 video태그 크기를 조정하는 방법을 지정하는 데 사용됩니다.
-  </p>
-  <ul class="lists">
-    <li class="list">
-      <p>contain : 이미지는 종횡비를 유지하지만 주어진 치수에 맞게 크기가 조정됩니다.</p>
-      <div class="img_box">
-        <img src="./mountains_640.jpg" alt="풍경사진">
-      </div>
-    </li>
-    <li class="list">
-      <p>cover : 이미지는 종횡비를 유지하고 주어진 치수를 채웁니다. 이미지에 맞게 잘립니다.</p>
-      <div class="img_box">
-        <img src="./mountains_640.jpg" alt="풍경사진">
-      </div>
-    </li>
-    <li class="list">
-      <p>fill : 기본값입니다. 이미지는 주어진 치수를 채우도록 크기가 조정됩니다. 필요한 경우 이미지에 맞게 늘어나거나 찌그러집니다.</p>
-      <div class="img_box">
-        <img src="./mountains_640.jpg" alt="풍경사진">
-      </div>
-    </li>
-    <li class="list">
-      <p>none : 이미지의 크기가 조정되지 않습니다.</p>
-      <div class="img_box">
-        <img src="./mountains_640.jpg" alt="풍경사진">
-      </div>
-    </li>
-    <li class="list">
-      <p>scale-down : 이미지가 가장 작은 버전 none또는 contain</p>
-      <div class="img_box">
-        <img src="./mountains_640.jpg" alt="풍경사진">
-      </div>
-    </li>
-  </ul>
+  <section class="content">
+    <div class="info">
+      <h2 class="title">object-fit</h2>
+      <p class="text">
+        CSS object-fit속성은 컨테이너에 맞게 img태그 또는 video태그 크기를 조정하는 방법을 지정하는 데 사용됩니다.
+      </p>
+      <dl class="definition">
+        <dt>JavaScript syntax:</dt>
+        <dd>object.style.objectFit="cover"</dd>
+      </dl>
+    </div>
+    <ul class="lists">
+      <li class="list">
+        <p>contain : 이미지는 종횡비를 유지하지만 주어진 치수에 맞게 크기가 조정됩니다.</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+      <li class="list">
+        <p>cover : 이미지는 종횡비를 유지하고 주어진 치수를 채웁니다. 이미지에 맞게 잘립니다.</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+      <li class="list">
+        <p>fill : 기본값입니다. 이미지는 주어진 치수를 채우도록 크기가 조정됩니다. 필요한 경우 이미지에 맞게 늘어나거나 찌그러집니다.</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+      <li class="list">
+        <p>none : 이미지의 크기가 조정되지 않습니다.</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+      <li class="list">
+        <p>scale-down : 이미지가 가장 작은 버전 none또는 contain</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+    </ul>
+  </section>
+  <section class="content">
+    <div class="info">
+      <h2 class="title">object-position</h2>
+      <p class="text">
+        CSS object-position속성은 object-fit속성과 함께 쓰이며 컨테이너 안에서 img태그 또는 video태그의 위치를 지정하는 데 사용됩니다.
+      </p>
+      <dl class="definition">
+        <dt>JavaScript syntax:</dt>
+        <dd>object.style.objectPosition="0 10%"</dd>
+      </dl>
+    </div>
+    <ul class="lists">
+      <li class="list position--leftTop">
+        <p>object-position: left top;</p>
+        <div class="img_box">
+          <img src="./mountains_640.jpg" alt="풍경사진">
+        </div>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
