Update: scss로 변경

--- a/object-fit/index.html
+++ b/object-fit/index.html
@@ -5,64 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>object-fit/position Sample</title>
+  <link rel="stylesheet" href="./style.css">
   <style>
-    .info {
-      padding-bottom: 20px;
-      margin-bottom: 40px;
-      border-bottom: 3px solid #000;
-    }
-
-    .title {
-      font-size: 30px;
-    }
-
-    .text {
-      font-size: 24px;
-    }
-
-    .definition > dt,
-    .definition > dd {
-      display: inline-block;
-      font-size: 24px;
-    }
-
-    .list {
-      margin-bottom: 30px;
-    }
-
-    .list:last-child {
-      margin-bottom: 0;
-    }
-
-    .list > p {
-      margin-bottom: 20px;
-      font-size: 20px;
-    }
-
-    .list .img_box img {
-      width: 300px;
-      height: 300px;
-    }
-
-    .list:nth-child(1) .img_box img {
-      object-fit: contain;
-    }
-    .list:nth-child(2) .img_box img {
-      object-fit: cover;
-    }
-    .list:nth-child(3) .img_box img {
-      object-fit: fill;
-    }
-    .list:nth-child(4) .img_box img {
-      object-fit: none;
-    }
-    .list:nth-child(5) .img_box img {
-      object-fit: scale-down;
-    }
-
-    .list.position--leftTop .img_box img {
-      object-position: left top;
-    }
+    
   </style>
 </head>
 <body>
