Update: 마커 모션 변경

--- a/marquee/index.html
+++ b/marquee/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <section class="content">
-    <div class="marquee">
+    <div class="marquee marquee--moveRightToLeft">
+      <img src="./musinsa_store.jpg" alt="무신사 스토어">
+    </div>
+    <div class="marquee marquee--moveLeftToRight">
       <img src="./musinsa_store.jpg" alt="무신사 스토어">
     </div>
   </section>
