--- a/marquee/index.html
+++ b/marquee/index.html
@@ -15,6 +15,22 @@
     <div class="marquee marquee--moveLeftToRight">
       <img src="./musinsa_store.jpg" alt="무신사 스토어">
     </div>
+    <div class="marquee marquee--moveTwoRightToLeft">
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+    </div>
+    <div class="marquee marquee--moveTwoLeftToRight">
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+    </div>
   </section>
 </body>
 </html>
