--- a/marquee/index.html
+++ b/marquee/index.html
@@ -10,10 +10,14 @@
 <body>
   <section class="content">
     <div class="marquee marquee--moveRightToLeft">
-      <img src="./musinsa_store.jpg" alt="무신사 스토어">
+      <div class="marquee__item">
+        <img src="./musinsa_store.jpg" alt="무신사 스토어">
+      </div>
     </div>
     <div class="marquee marquee--moveLeftToRight">
-      <img src="./musinsa_store.jpg" alt="무신사 스토어">
+      <div class="marquee__item">
+        <img src="./musinsa_store.jpg" alt="무신사 스토어">
+      </div>
     </div>
     <div class="marquee marquee--moveTwoRightToLeft">
       <div class="marquee__item">
