--- a/marquee/index.html
+++ b/marquee/index.html
@@ -35,6 +35,18 @@
         <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
       </div>
     </div>
+    <div class="marquee marquee--script">
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+      <div class="marquee__item">
+        <img src="./musinsa_standard.jpg" alt="무신사 스탠다드">
+      </div>
+    </div>
   </section>
+  <script src="./index.js"></script>
+  <script>
+    moveRightToLeft();
+  </script>
 </body>
 </html>
