--- a/masonry/index.html
+++ b/masonry/index.html
@@ -4,37 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Masonry</title>
 </head>
 <body>
-  <ul class="masonry">
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Chalet-St.-Mortiz-01.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-BunkerToren-01-Overview-Park.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-West-399-01.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-HOLT-01.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-KJ-Plein-01.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Merckt-Hero-LR.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Villa-1-52.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Villa-JM-00.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Villa-L-02.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-Villa-MW-00.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-5Tracks-01-1120x1400.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-DMC-Den-Haag-01-768x1152.jpg" alt="이미지"></li>
-    <li class="masonry__item"><img src="./images/Powerhouse-Company-LEAD-01-1120x1400.jpg" alt="이미지"></li>
-  </ul>
-  <script>
-    const items = document.querySelectorAll('.masonry__item');
-    const maxAnimationDelay = 3;
-    const getRandomInt = (min, max) => {
-      min = Math.ceil(min);
-      max = Math.floor(max);
-      return Math.floor(Math.random() * (max - min)) + min; //최댓값은 제외, 최솟값은 포함
-    }
-
-    items.forEach((item) => {
-      item.style = `animation-delay: ${getRandomInt(0, 10) * maxAnimationDelay / 10}s`;
-    });
-  </script>
+  <div id="root"></div>
 </body>
 </html>
