--- a/redux/src/opentutorials/with-redux.html
+++ b/redux/src/opentutorials/with-redux.html
@@ -13,6 +13,14 @@
       border: 5px solid #000;
       padding: 10px;
     }
+    .sample {
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      width: 1000px;
+      height: 800px;
+      transform: translate(-50%, -50%);
+    }
   </style>
   <div id="red"></div>
   <div id="blue"></div>
